# zrb-extras

./: .gitignore  README.md  project.sh  pyproject.toml  requirements.txt  template.env  zrb_init.py
_automate/zrb_extras/: local.py
_automate/zrb_extras/cmd/: activate-venv.sh  prepare-venv.sh  publish.sh
cmd/: playground.sh
example/llm/tool/: zrb_init.py
playground-template/: project.sh  zrb_init.py
src/: zrb_init.py
src/zrb-extras/: README.md  pyproject.toml  requirements.txt
src/zrb-extras/src/zrb_extras/: __init__.py  __main__.py  zrb_init.py
src/zrb-extras/src/zrb_extras/_automate/airbyte/: add.py
src/zrb-extras/src/zrb_extras/_automate/airbyte/template/_automate/snake_zrb_app_name/: local.py
src/zrb-extras/src/zrb_extras/_automate/airbyte/template/src/kebab-zrb-app-name/: docker-compose.env  docker-compose.yml
src/zrb-extras/src/zrb_extras/_automate/airbyte/template/src/kebab-zrb-app-name/src/: Dockerfile
src/zrb-extras/src/zrb_extras/_automate/airflow/: add.py
src/zrb-extras/src/zrb_extras/_automate/airflow/template/_automate/snake_zrb_app_name/: container.py
src/zrb-extras/src/zrb_extras/_automate/airflow/template/src/kebab-zrb-app-name/: docker-compose.env  docker-compose.yml
src/zrb-extras/src/zrb_extras/_automate/airflow/template/src/kebab-zrb-app-name/src/: Dockerfile
src/zrb-extras/src/zrb_extras/_automate/citus/: add.py
src/zrb-extras/src/zrb_extras/_automate/citus/template/_automate/snake_zrb_app_name/: container.py
src/zrb-extras/src/zrb_extras/_automate/citus/template/src/kebab-zrb-app-name/: docker-compose.env  docker-compose.yml
src/zrb-extras/src/zrb_extras/_automate/citus/template/src/kebab-zrb-app-name/src/: Dockerfile
src/zrb-extras/src/zrb_extras/_automate/generate_airbyte/: add.py
src/zrb-extras/src/zrb_extras/_automate/generate_airbyte/template/_automate/snake_zrb_app_name/: image.py
src/zrb-extras/src/zrb_extras/_automate/generate_airbyte/template/src/kebab-zrb-app-name/: docker-compose.yml
src/zrb-extras/src/zrb_extras/_automate/generate_airflow/: add.py
src/zrb-extras/src/zrb_extras/_automate/generate_airflow/template/src/kebab-zrb-app-name/: docker-compose.env  docker-compose.yml
src/zrb-extras/src/zrb_extras/_automate/generate_citus/: add.py
src/zrb-extras/src/zrb_extras/_automate/generate_citus/template/_automate/snake_zrb_app_name/: image.py
src/zrb-extras/src/zrb_extras/_automate/generate_citus/template/src/kebab-zrb-app-name/: docker-compose.env  docker-compose.yml
src/zrb-extras/src/zrb_extras/_automate/generate_metabase/: add.py
src/zrb-extras/src/zrb_extras/_automate/generate_metabase/template/_automate/snake_zrb_app_name/: image.py
src/zrb-extras/src/zrb_extras/_automate/generate_metabase/template/src/kebab-zrb-app-name/: docker-compose.yml
src/zrb-extras/src/zrb_extras/_automate/metabase/: add.py
src/zrb-extras/src/zrb_extras/_automate/metabase/template/src/kebab-zrb-app-name/src/: Dockerfile
src/zrb_extras/: __init__.py  __main__.py
src/zrb_extras/airflow/: __init__.py  _input.py  airflow.py
src/zrb_extras/airflow/template/_automate/snake_zrb_app_name/: __init__.py
src/zrb_extras/airflow/template/_automate/snake_zrb_app_name/container/: _env.py  init.py  remove.py  start.py  stop.py
src/zrb_extras/airflow/template/src/kebab-zrb-app-name/: .gitignore  docker-compose.yml
src/zrb_extras/airflow/template/src/kebab-zrb-app-name/config/: airflow.cfg
src/zrb_extras/llm/tool/: __init__.py  audio_player.py  factory.py  listen_wrapper.py  sound_classifier.py  vad.py  voice.py
src/zrb_extras/llm/tool/google/: __init__.py  client.py  default_config.py  listen.py  speak.py
src/zrb_extras/llm/tool/openai/: __init__.py  client.py  default_config.py  listen.py  speak.py
src/zrb_extras/llm/tool/pyttsx3/: __init__.py  speak.py
src/zrb_extras/llm/tool/termux/: __init__.py  default_config.py  listen.py  speak.py
src/zrb_extras/llm/tool/vosk/: __init__.py  default_config.py  listen.py
src/zrb_extras/llm/tool/youtube/: __init__.py  transcript.py
src/zrb_extras/tool/: voice.py
tests/: conftest.py
tests/integration/: test_factory_integration.py
tests/unit/: test_listen_wrapper.py  test_sound_classifier.py
(+4 files in other folders)
