[tool.poetry]
name = "zrb-extras"
version = "0.0.4"
description = "Collection of Zrb additional utilities"
authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/goFrendiAsgard/zrb-extras"
repository = "https://github.com/goFrendiAsgard/zrb-extras"
documentation = "https://github.com/goFrendiAsgard/zrb-extras"
keywords = []

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
zrb = ">=0.27.0"

[tool.poetry.dev-dependencies]
flake8 = "~7.0.0"
black = "~24.3.0"
isort = "~5.13.2"
pytest = "~7.4.0"
pytest-cov = "~4.1.0"
pytest-asyncio = "~0.21.0"
flameprof = "~0.4"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
