[tool.poetry]
name = "zrb-extras"
version = "0.0.8"
description = "Collection of Zrb additional utilities"
authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/goFrendiAsgard/zrb-extras"
repository = "https://github.com/goFrendiAsgard/zrb-extras"
documentation = "https://github.com/goFrendiAsgard/zrb-extras"
keywords = []

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0.0"
zrb = ">=1.15.17"
sounddevice = "^0.5.2"
simpleaudio = "^1.0.4"
google-genai = "^1.32.0"
soundfile = "^0.13.1"
numpy = "^2.3.2"
scipy = "^1.16.1"

[tool.poetry.group.dev.dependencies]
flake8 = "~7.0.0"
pytest = "~7.4.0"
pytest-cov = "~4.1.0"
pytest-asyncio = "~0.21.0"
flameprof = "~0.4"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
