[tool.poetry]
name = "zrb-extras"
version = "0.3.3"
description = "Collection of Zrb additional utilities"
authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/goFrendiAsgard/zrb-extras"
repository = "https://github.com/goFrendiAsgard/zrb-extras"
documentation = "https://github.com/goFrendiAsgard/zrb-extras"
keywords = []

[tool.poetry.dependencies]
python = ">=3.11.0,<3.14"
zrb = ">=1.21.2"
sounddevice = { version = "^0.5.2", optional = true }
google-genai = { version = "^1.32.0", optional = true }
soundfile = { version = "^0.13.1", optional = true }
numpy = { version = "^2.3.2", optional = true }
openai = { version = "^2.14.0", optional = true }
vosk = { version = "^0.3.45", optional = true }
pyttsx3 = { version = "^2.99", optional = true }
youtube-transcript-api = { version = "^0.6.3", optional = true }

[tool.poetry.extras]
openai = ["openai", "sounddevice", "soundfile", "numpy"]
google-genai = ["google-genai", "sounddevice", "soundfile", "numpy"]
youtube = ["youtube-transcript-api"]
vosk = ["vosk", "pyttsx3", "sounddevice", "numpy"]
all = ["openai", "google-genai", "vosk", "pyttsx3", "sounddevice", "soundfile", "numpy", "youtube-transcript-api"]

[tool.poetry.group.dev.dependencies]
flake8 = "~7.0.0"
pytest = "~7.4.0"
pytest-cov = "~4.1.0"
pytest-asyncio = "~0.21.0"
flameprof = "~0.4"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"