[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "zrb-extras"
version = "0.0.1"
authors = [
  { name="Go Frendi Gunawan", email="gofrendiasgard@gmail.com" },
]
description = "Collection of Zrb tasks and utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "zrb>=0.0.89"
]
 

[project.optional-dependencies]
dev = []
test = []

[project.urls]
"Homepage" = "https://github.com/state-alchemists/zrb-extras"
"Bug Tracker" = "https://github.com/state-alchemists/zrb-extras/issues"

[project.scripts]
zrb-extras = "zrb_extras.__main__:hello"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]